# rabbiteer

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
src/rabbiteer/: __init__.py  client.py
tests/: pyproject.toml  test_client.py
