[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rabbiteer"
version = "0.1.1"
authors = [
  { name = "Sebastian Sala", email = "sebastian.sala.alanis@hotmail.com" },
]
description = "A friendly and robust RabbitMQ client library for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pika>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/sebas-sala/rabbiteer"
"Bug Tracker" = "https://github.com/sebas-sala/rabbiteer/issues"