[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[project]
name = "rabbiteer"
version = "0.1.8"
authors = [
  { name = "Sebastian Sala", email = "sebastian.sala.alanis@hotmail.com" },
]
description = "A friendly and robust RabbitMQ client library for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pika>=1.3.0",
    "retry>=0.9.2"
]

[project.urls]
"Homepage" = "https://github.com/sebas-sala/rabbiteer"
"Bug Tracker" = "https://github.com/sebas-sala/rabbiteer/issues"